--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^11.2.6
   cloud_firestore: ^4.9.1
   chatview: ^1.3.1
+  local_image_provider: ^4.3.0
 
 
 dev_dependencies:
