--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^4.9.1
   chatview: ^1.3.1
   local_image_provider: ^4.3.0
+  flutter_inapp_notifications: ^0.0.3
+  percent_indicator: ^4.2.3
 
 
 dev_dependencies:
